test/types/locale/bradc/createNewLocale.good
myNewLoc = createNewLocale.chpl:2: error: halt reached - Pure virtual function called.
